six column forms and prevent memory effects for multiple form calls

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -119,6 +119,9 @@ section {
       text-align: center;
     }
   }
+  .six.columns:nth-child(even) {
+    float: right;
+  }
   div.columns {
     margin: 1.5em 0;
   }
