--- a/app/views/site_partials/_contact_form.html.erb
+++ b/app/views/site_partials/_contact_form.html.erb
@@ -1,9 +1,9 @@
-<% @cms_form = @cms_site.contact_forms.where(identifier: param_1).first %>
-<% @contact = @cms_form.build_contact(params['contact'].blank? ? {} : params.fetch('contact')) %>
+<% @cms_form = @cms_site.contact_forms.where(identifier: param_1 || params['contact_form_id']).first %>
+<% @contact ||= @cms_form.build_contact(params['contact'].blank? ? {} : params.fetch('contact')) %>
 
 <div id="<%= @cms_form.identifier %>-wrapper" class="contact-form-wrapper">
   <h3><%= t(@cms_form.identifier, :scope => 'cms.contact_form.title') %></h3>
-  <%= formatted_form_for [:cms, @cms_form, @contact], url: cms_contact_form_contacts_url(contact_form_id: @cms_form.id, method: :post), type: :vertical, html: { id: @cms_form.identifier } do |f| %>
+  <%= formatted_form_for [:cms, @cms_site, @cms_form, @contact], url: cms_site_contact_form_contacts_url(contact_form_id: @cms_form.id, site_id: @cms_site.id, method: :post), type: :vertical, html: { id: @cms_form.identifier } do |f| %>
       <% @cms_form.contact_fields.each do |field| %>
           <% if field.is_a?(Array) %>
           <%# encapsulate in a fieldset %>
@@ -20,11 +20,12 @@
       <% ((params['contact'] || {}).keys - @cms_form.contact_fields).each do |field| %>
           <%= hidden_field_tag "contact[#{field}]", params['contact'][field] %>
       <% end %>
+      <%= hidden_field_tag 'referring_page', page_path(@cms_page, false) %>
       <span class="hint"><%= t(:required_hint, :scope => 'cms.contact_form', :symbol => '*') %></span>
       <div class="button-group">
       <% if @cms_site.css_framework.underscore.to_sym == :gumby %>
           <div class="medium primary btn">
-            <button type='submit' form='<%#= @cms_form.identifier %>'>
+            <button type='submit' form='<%= @cms_form.identifier %>'>
               <% if @cms_form.contact_form.nil? %>
               <%= t((@cms_form.submit_label || :submit), :scope => 'cms.contact_form') %>
               <% else %>
