added a node actions div to the treeviews to not make an ajax call on a node click

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -40,6 +40,12 @@
     .fancytree-container
         .fancytree-node {
             position: relative;
+            padding-right: 34px;
+            .node-actions a {
+                position: relative;
+                left: 0;
+                top: -4px;
+            }
 }
         img.fullsize {
             position: absolute;
