--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -45,6 +45,10 @@
                 position: relative;
                 left: 0;
                 top: -4px;
+                opacity: 0.6;
+            }
+            .node-actions a:hover {
+                opacity: 1;
             }
 }
         img.fullsize {
@@ -91,10 +95,31 @@
     display: none;
 }
 
-#dynamic-content
-  .page-header {
-    padding-bottom: 0;
-    margin-bottom: 1em;
+#dynamic-content {
+    .page-header {
+        padding-bottom: 0;
+        margin-bottom: 1em;
+    }
+}
+#dynamic-overlay {
+    background: transparent url('/images/dynamic-overlay.png') top left repeat;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9000;
+    .ajax-spinner {
+        width: 66%;
+        height: 48px;
+        background: #ffffff url('/images/loader_bar.png') 20px 8px no-repeat;
+        padding-left: 145px;
+        padding-top: 4px;
+        font-style: italic;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
 
 #content .row-fluid:nth-child(1) {
