site mirroring - copy layout, page and snippet content on creation, and mirror groups for snippets

--- a/app/views/layouts/admin/cms/_topnav.html.haml
+++ b/app/views/layouts/admin/cms/_topnav.html.haml
@@ -2,8 +2,9 @@
   .navbar-inner
     %a.brand
       Coruscope
-      %span.site-identity
-        = (@site.nil? || @site.new_record?) ? '' : @site.path
+      - unless (@site.nil? || @site.new_record?)
+        %span.site-identity
+          = @site.path
     %ul.nav
       %li.divider-vertical
       - if @site && !@site.new_record?
