--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,12 @@
-<h2>Resend confirmation instructions</h2>
+<h2><%= t(:title, :scope => 'devise.confirmations') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label :email, t(:email, :scope => 'devise.labels') %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <div><%= f.submit t(:submit, :scope => 'devise.confirmations' %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
