--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= t(:welcome, :scope => 'devise.mailer.confirmation_instructions', :email => @email) %></p>
 
-<p>You can confirm your account email through the link below:</p>
+<p><%= t(:body, :scope => 'devise.mailer.confirmation_instructions' %></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>
+<p><%= link_to t(:link_text, :scope => 'devise.mailer.confirmation_instructions'), confirmation_url(@resource, :confirmation_token => @token) %></p>
