--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t(:hello, :scope => 'devise.mailer.unlock_instructions', :email => @resource.email) %></p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p><%= t(:body, :scope => 'devise.mailer.unlock_instructions') %></p>
 
-<p>Click the link below to unlock your account:</p>
+<p><%= t(:instructions, :scope => 'devise.mailer.unlock_instructions') %></p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @token) %></p>
+<p><%= link_to t(:link_text, :scope => 'devise.mailer.unlock_instructions'), unlock_url(@resource, :unlock_token => @token) %></p>
