--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,12 @@
-<h2>Forgot your password?</h2>
+<h2><%= t(:title_forgot, :scope => 'devise.passwords') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label :email, t(:email, :scope => 'devise.labels') %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div><%= f.submit t(:submit_forgot, :scope => 'devise.passwords') %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
