dynamically update site identity and label site tree with locales

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -4,7 +4,7 @@
     overflow-y: hidden;
     .brand {
         margin-right: 10%;
-        .site-identity {
+        #site_identity {
             position: relative;
             top: -0.15em;
             background-color: #005580; /* #0088CC; */
