--- a/app/views/layouts/admin/cms/_topnav.html.haml
+++ b/app/views/layouts/admin/cms/_topnav.html.haml
@@ -3,7 +3,7 @@
     %a.brand
       Coruscope
       - unless (@site.nil? || @site.new_record?)
-        %span.site-identity
+        %span#site_identity
           = @site.path
     %ul.nav
       %li.divider-vertical
