--- a/app/views/admin/cms/files/edit.html.haml
+++ b/app/views/admin/cms/files/edit.html.haml
@@ -3,3 +3,6 @@
 
 = comfy_form_for @file, as: :file, url: {action: :update}, type: :vertical do |form|
   = render form
+
+= content_for_ajax :site_identity do
+  = @site.path
