--- a/app/views/admin/cms/pages/edit.html.haml
+++ b/app/views/admin/cms/pages/edit.html.haml
@@ -8,3 +8,6 @@
 
 = comfy_form_for @page, as: :page, url: {action: :update}, html: {multipart: true}, type: :vertical do |form|
   = render form
+
+= content_for_ajax :site_identity do
+  = @site.path
