add links in topnav to change site mirror

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -18,6 +18,10 @@
     }
     .nav {
         width: 60%;
+        .site-locales a {
+            display: inline-block;
+            float: left;
+        }
         #cms-current-context {
             margin-left: 3%;
             margin-top: 10px;
