--- a/app/views/admin/cms/files/_form.html.haml
+++ b/app/views/admin/cms/files/_form.html.haml
@@ -13,7 +13,20 @@
 = content_for_ajax :meta_pane do
   = comfy_form_for @file, as: :file, url: { action: @file.new_record? ? :create : :update}, type: :vertical do |metaform|
     = render :partial => 'admin/cms/categories/form', :object => metaform
-    = form.text_area :description, cols: 8
+    - @locales = @site.mirrors.map(&:locale)
+    %ul.nav.nav-tabs
+      - @locales.each do |locale|
+        %li{class: (@site.locale == locale ? 'active' : '')}
+          %a{data: {toggle: :tab}, href: "#description_#{locale}"}
+            = locale.upcase
+    %div#description_per_locale.tab-content
+      - @locales.each do |locale|
+        %div{id: "description_#{locale}", class: "tab-pane fade#{@site.locale == locale ? ' in active' : ''}"}
+          .control-group
+            %label.control-label{for: "file_description_#{locale}"}
+              = "#{t(:description, :scope => 'activerecord.attributes.cms/file')} (#{locale.upcase})"
+            .controls
+              = text_area_tag "file[description_#{locale}]", @file.send("description_#{locale}"), cols: 8
     - unless @file.new_record?
       %button.btn.btn-small.btn-primary.pull-right
         = t('.update')
