dynamic replacement of whole topbar when making ajax calls to edit

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -18,9 +18,18 @@
     }
     .nav {
         width: 60%;
+        float: right;
+        .site-locales {
+            margin-top: 5px;
+        }
         .site-locales a {
             display: inline-block;
             float: left;
+            padding: 5px 10px;
+        }
+        .site-locales a.active {
+            background-color: #005580;
+            color: #fff;
         }
         #cms-current-context {
             margin-left: 3%;
