--- a/app/views/admin/cms/files/edit.html.haml
+++ b/app/views/admin/cms/files/edit.html.haml
@@ -4,5 +4,6 @@
 = comfy_form_for @file, as: :file, url: {action: :update}, type: :vertical do |form|
   = render form
 
-= content_for_ajax :site_identity do
-  = @site.path
+- if request.xhr?
+  = content_for_ajax :top do
+    = render :partial => 'layouts/admin/cms/topnav'
