--- a/app/views/admin/cms/pages/edit.html.haml
+++ b/app/views/admin/cms/pages/edit.html.haml
@@ -9,5 +9,6 @@
 = comfy_form_for @page, as: :page, url: {action: :update}, html: {multipart: true}, type: :vertical do |form|
   = render form
 
-= content_for_ajax :site_identity do
-  = @site.path
+- if request.xhr?
+  = content_for_ajax :top do
+    = render :partial => 'layouts/admin/cms/topnav'
