add font inheritance to wysihtml5 textareas and fix styling and labelling of editor areas

--- a/app/assets/javascripts/comfortable_mexican_sofa/application.js.coffee.erb
+++ b/app/assets/javascripts/comfortable_mexican_sofa/application.js.coffee.erb
@@ -57,8 +57,10 @@ window.CMS.wysiwyg = ->
     $(element).wysihtml5
       html:         true
       color:        false
+      style:        true
       stylesheets:  ['<%= stylesheet_path(:ail) %>']
       locale:       'de-DE'
+    $(element).css('font-family','inherit')
 
 
 window.CMS.codemirror = ->
