--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -100,8 +100,8 @@
 }
 
 #coruscope
-  textarea.CodeMirror {
-    resize: both;
+    textarea.CodeMirror {
+        resize: both;
 }
 
 #coruscope .content-actions .file-uploader {
@@ -174,6 +174,13 @@
     padding-right: 18px;
     overflow-y: auto;
 }
+
+#coruscope
+    .center-column .nav-tabs a,
+    .left-column .nav-tabs a{
+    padding: 2px 8px;
+}
+
 
 #coruscope
     form.formatted {
