--- a/app/views/layouts/boilerplate/gumby-html5.html.haml
+++ b/app/views/layouts/boilerplate/gumby-html5.html.haml
@@ -8,7 +8,7 @@
     %meta{name: :keywords, content: 'Spanischkurse,Costa Rica,Auslandspraktikum,Sprachschule'}
 
     %link{rel: 'shortcut icon', href: cms_site_asset_path(@cms_site, 'images/favicon.ico'), type: 'image/x-icon'}
-    = stylesheet_link_tag :application, cms_site_handle(@cms_site).to_sym
+    = stylesheet_link_tag :application, @cms_site.handle.to_sym
     = stylesheet_link_tag cms_render_css_path(@cms_site.id, @cms_layout.identifier)
     = javascript_include_tag :application, :gumby
     - if @cms_page == @cms_site.pages.root
@@ -17,7 +17,7 @@
 
     // Facebook Metadata - TODO: fill out!
     %meta{property: 'og:title', content: @cms_site.label}
-    %meta{property: 'og:image', itemprop: 'image', content: cms_site_asset_path(@cms_site, "images/#{cms_site_handle(@cms_site)}.png")}
+    %meta{property: 'og:image', itemprop: 'image', content: cms_site_asset_path(@cms_site, "images/#{@cms_site.handle}.png")}
     %meta{property: 'og:description', content: "AiL - Spanischkurse, Volontariate, Praktika und High School Programme in verschiedensten Regionen Costa Ricas."}
     %meta{property: 'og:url', content: "http://www.#{@cms_site.hostname}"}
     %meta{property: 'fb:admins', content: ''}
@@ -27,7 +27,7 @@
     %meta{property: 'twitter:url', content: "http://www.#{@cms_site.hostname}"}
     %meta{property: 'twitter:title', content: @cms_site.label}
     %meta{property: 'twitter:description', content: 'AiL - Spanischkurse, Volontariate, Praktika und High School Programme in verschiedensten Regionen Costa Ricas.'}
-    %meta{property: 'twitter:image', content: cms_site_asset_path(@cms_site, "images/#{cms_site_handle(@cms_site)}.png")}
+    %meta{property: 'twitter:image', content: cms_site_asset_path(@cms_site, "images/#{@cms_site.handle}.png")}
 
   %body{class: [@cms_layout.identifier, (@cms_page == @cms_site.pages.root) ? 'home' : 'subsection'].join(' ')}
     = yield
