correct form redirection and forwarding for multiple locale sites and paths, full SMTP mail addresses and constant mail locale independent of processing site mirror

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -1016,6 +1016,7 @@ body > footer {
       margin: 0;
       select {
         width: 140%;
+        padding: 6px 15px;
       }
     }
     textarea {
