--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -211,6 +211,9 @@
             .nav {
             width: 100%;
         }
+        textarea.short {
+            height: 120px;
+        }
     }
 
 #content_messages a {
@@ -223,6 +226,9 @@
             textarea {
                 max-height: 160px;
 }
+            textarea.short {
+                max-height: 80px;
+            }
 
 /* Restyle content-actions (right-hand column moved into left) */
 .content-actions {
