--- a/app/views/admin/cms/sites/edit.html.haml
+++ b/app/views/admin/cms/sites/edit.html.haml
@@ -1,4 +1,4 @@
-= comfy_form_for @site, as: :site, url: {action: :update}, type: :vertical do |form|
+= comfy_form_for @site, as: :site, url: {action: :update}, html: {multipart: true}, type: :vertical do |form|
   = render form
 
 - if request.xhr?
