--- a/app/views/admin/cms/sites/new.html.haml
+++ b/app/views/admin/cms/sites/new.html.haml
@@ -1,5 +1,5 @@
 .page-header
   %h4= t('.title')
 
-= comfy_form_for @site, as: :site, url: {action: :create}, type: :vertical do |form|
+= comfy_form_for @site, as: :site, url: {action: :create}, html: {multipart: true}, type: :vertical do |form|
   = render form
