--- a/app/views/layouts/boilerplate/gumby-html5.html.haml
+++ b/app/views/layouts/boilerplate/gumby-html5.html.haml
@@ -4,10 +4,11 @@
     %meta{charset: 'utf-8'}
     %title{itemprop: :name}
       = [@cms_site.label, @cms_page.label].compact.join(' - ')
-    %meta{name: :description, content: 'AiL - Spanischkurse, Volontariate, Praktika und High School Programme in verschiedensten Regionen Costa Ricas.'}
-    %meta{name: :keywords, content: 'Spanischkurse,Costa Rica,Auslandspraktikum,Sprachschule'}
+    %meta{name: :description, content: @cms_site.description }
+    %meta{name: :keywords, content: @cms_site.keywords }
 
-    %link{rel: 'shortcut icon', href: cms_site_asset_path(@cms_site, 'images/favicon.ico'), type: 'image/x-icon'}
+    - unless @cms_site.favicon_file_name.blank?
+      %link{rel: 'shortcut icon', href: cms_site_asset_path(@cms_site.favicon.url), type: 'image/x-icon'}
     = stylesheet_link_tag :application, @cms_site.handle.to_sym
     = stylesheet_link_tag cms_render_css_path(@cms_site.id, @cms_layout.identifier)
     = javascript_include_tag :application, :gumby
@@ -15,19 +16,21 @@
       = javascript_include_tag :slider
     = javascript_include_tag cms_render_js_path(@cms_site.id, @cms_layout.identifier)
 
-    // Facebook Metadata - TODO: fill out!
+    // Facebook Metadata
     %meta{property: 'og:title', content: @cms_site.label}
     %meta{property: 'og:type', content: 'website'}
-    %meta{property: 'og:image', itemprop: 'image', content: cms_site_asset_url(@cms_site, "images/#{@cms_site.handle}_identity.png")}
-    %meta{property: 'og:description', content: "AiL - Spanischkurse, Volontariate, Praktika und High School Programme in verschiedensten Regionen Costa Ricas."}
+    - unless @cms_site.identity_image_file_name.blank?
+      %meta{property: 'og:image', itemprop: 'image', content: cms_site_asset_url(@cms_site.identity_image.url)}
+    %meta{property: 'og:description', content: @cms_site.description }
     %meta{property: 'og:url', content: "http://www.#{@cms_site.hostname}"}
 
     // Twitter Metadata
     %meta{property: 'twitter:card', content: 'summary'}
     %meta{property: 'twitter:url', content: "http://www.#{@cms_site.hostname}"}
     %meta{property: 'twitter:title', content: @cms_site.label}
-    %meta{property: 'twitter:description', content: 'AiL - Spanischkurse, Volontariate, Praktika und High School Programme in verschiedensten Regionen Costa Ricas.'}
-    %meta{property: 'twitter:image', content: cms_site_asset_path(@cms_site, "images/#{@cms_site.handle}.png")}
+    %meta{property: 'twitter:description', content: @cms_site.description }
+    - unless @cms_site.identity_image_file_name.blank?
+      %meta{property: 'twitter:image', content: cms_site_asset_url(@cms_site.identity_image.url)}
 
   %body{class: [@cms_layout.identifier, (@cms_page == @cms_site.pages.root) ? 'home' : 'subsection'].join(' ')}
     = yield
