--- a/app/views/site_partials/navigation/_main_nav.html.erb
+++ b/app/views/site_partials/navigation/_main_nav.html.erb
@@ -1,5 +1,5 @@
 <div id="main_nav" class="navbar">
-    <a class="toggle" gumby-trigger="#main_nav > li" href="#"><i class="icon-menu"></i></a>
+    <a class="toggle" gumby-trigger="#main_nav > ul" href="#"><i class="icon-menu"></i></a>
     <ul>
       <% if defined?(param_1) && param_1 %>
         <%# HOME link %>
